--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
@@ -18,18 +18,19 @@
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
-    "csurf": "^1.11.0",
+    "csurf": "^1.9.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "express-validator": "^6.14.0",
-    "googleapis": "^95.0.0",
+    "express-validator": "^5.3.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "multer": "^1.4.0",
     "mysql2": "^1.6.1",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^4.6.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.8.3",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
